[Editorial] remove endnotes that refer to differences in volume layout
We’re following the original editions’ layout here, so they’re not needed.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -15,7 +15,9 @@
 				<li id="note-2" epub:type="endnote">
 					<p>The <i>Romish</i> Rituals direct the baptizing of the child, in cases of danger, <i>before</i> it is born;⁠—but upon this proviso, That some part or other of the child’s body be seen by the baptizer:⁠⸺⁠But the Doctors of the <i>Sorbonne</i>, by a deliberation held amongst them, <i>April</i> 10, 1733,⁠—have enlarged the powers of the midwives, by determining, That though no part of the child’s body should appear,⁠⸺⁠that baptism shall, nevertheless, be administered to it by injection,⁠—<i xml:lang="fr">par le moyen d’une petite canulle,⁠—Anglicè</i> <em>a squirt</em>.⁠⸺’Tis very strange that <abbr>St.</abbr> <i>Thomas Aquinas</i>, who had so good a mechanical head, both for tying and untying the knots of school-divinity,⁠—should, after so much pains bestowed upon this,⁠—give up the point at last, as a second <i xml:lang="fr">La chose impossible</i>,⁠—“<i xml:lang="la">Infantes in maternis uteris existentes (quoth <abbr>St.</abbr> <i>Thomas!</i>) baptizari possunt <em>nullo modo</em></i>.”⁠—O <i>Thomas! Thomas!</i></p>
 					<p>If the reader has the curiosity to see the question upon baptism <em>by injection</em>, as presented to the Doctors of the <i>Sorbonne</i>, with their consultation thereupon, it is as follows.</p>
-					<p><a href="chapter-1-20.xhtml#noteref-2" epub:type="backlink">↩</a></p>
+					<p>
+						<a href="chapter-1-20.xhtml#noteref-2" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-3" epub:type="endnote">
 					<p>Vide Deventer, Paris <abbr>edit.</abbr>, 4to, 1734, <abbr>p.</abbr> 366. <a href="chapter-1-20.xhtml#noteref-3" epub:type="backlink">↩</a></p>
@@ -45,7 +47,10 @@
 					<p><abbr>Mr.</abbr> <i>Shandy’s</i> compliments to orators⁠⸺⁠is very sensible that <i>Slawkenbergius</i> has here changed his metaphor⁠⸻which he is very guilty of:⁠⸺⁠that as a translator, <abbr>Mr.</abbr> <i>Shandy</i> has all along done what he could to make him stick to it⁠—but that here ’twas impossible. <a href="slawkenbergius-en.xhtml#noteref-11" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-12" epub:type="endnote">
-					<p><i xml:lang="la">Nonnulli ex nostratibus eadem loquendi formulâ <abbr>utun.</abbr> Quinimo &amp; Logistæ &amp; Canonistæ⁠⸺⁠Vid. Parce Barne Jas in <abbr>d. L.</abbr> Provincial. <abbr>Constitut.</abbr> de <abbr>conjec. vid. Vol. Lib.</abbr> 4. <abbr>Titul.</abbr> 1. <abbr>n.</abbr> 7. quâ etiam in re conspir. Om de Promontorio <abbr>Nas. Tichmak. ff. d. tit.</abbr> 3. <abbr>fol.</abbr> 189. <abbr>passim. Vid. Glos.</abbr> de <abbr>contrahend.</abbr> empt, <abbr>etc.</abbr> necnon <abbr class="name">J.</abbr> Scrudr, in cap. § <abbr>refut.</abbr> per totum. Cum his <abbr>cons.</abbr> <abbr>Rever.</abbr> <abbr class="name">J.</abbr> Tubal, <abbr>Sentent.</abbr> &amp; <abbr>Prov.</abbr> <abbr>cap.</abbr> 9. <abbr>ff.</abbr> 11, 12. <abbr>obiter.</abbr> <span epub:type="z3998:roman">V</span> &amp; Librum, cui <abbr>Tit.</abbr> de Terris &amp; <abbr>Phras. Belg.</abbr> ad finem, cum comment, <abbr>N.</abbr> Bardy <abbr>Belg. Vid. Scrip. Argentotarens.</abbr> de <abbr>Antiq. Ecc.</abbr> in <abbr>Episc. Archiv.</abbr> fid <abbr>coll.</abbr> per Von Jacobum Koinshoven Folio Argent. 1583. <abbr>præcip.</abbr> ad finem. Quibus <abbr>add.</abbr> Rebuff in <abbr>L.</abbr> obvenire de <abbr>Signif. Nom. ff. fol.</abbr> &amp; de jure <abbr>Gent.</abbr> &amp; <abbr>Civil.</abbr> de <abbr>protib.</abbr> aliena <abbr>feud.</abbr> per federa, <abbr>test.</abbr> <abbr class="name">Joha.</abbr> Luxius in prolegom, quem velim videas, de <abbr>Analy. Cap.</abbr> 1, 2, 3. <abbr>Vid.</abbr> Idea.</i> <a href="slawkenbergius-en.xhtml#noteref-12" epub:type="backlink">↩</a></p>
+					<p>
+						<i xml:lang="la">Nonnulli ex nostratibus eadem loquendi formulâ <abbr>utun.</abbr> Quinimo &amp; Logistæ &amp; Canonistæ⁠⸺⁠Vid. Parce Barne Jas in <abbr>d. L.</abbr> Provincial. <abbr>Constitut.</abbr> de <abbr>conjec. vid. Vol. Lib.</abbr> 4. <abbr>Titul.</abbr> 1. <abbr>n.</abbr> 7. quâ etiam in re conspir. Om de Promontorio <abbr>Nas. Tichmak. ff. d. tit.</abbr> 3. <abbr>fol.</abbr> 189. <abbr>passim. Vid. Glos.</abbr> de <abbr>contrahend.</abbr> empt, <abbr>etc.</abbr> necnon <abbr class="name">J.</abbr> Scrudr, in cap. § <abbr>refut.</abbr> per totum. Cum his <abbr>cons.</abbr> <abbr>Rever.</abbr> <abbr class="name">J.</abbr> Tubal, <abbr>Sentent.</abbr> &amp; <abbr>Prov.</abbr> <abbr>cap.</abbr> 9. <abbr>ff.</abbr> 11, 12. <abbr>obiter.</abbr> <span epub:type="z3998:roman">V</span> &amp; Librum, cui <abbr>Tit.</abbr> de Terris &amp; <abbr>Phras. Belg.</abbr> ad finem, cum comment, <abbr>N.</abbr> Bardy <abbr>Belg. Vid. Scrip. Argentotarens.</abbr> de <abbr>Antiq. Ecc.</abbr> in <abbr>Episc. Archiv.</abbr> fid <abbr>coll.</abbr> per Von Jacobum Koinshoven Folio Argent. 1583. <abbr>præcip.</abbr> ad finem. Quibus <abbr>add.</abbr> Rebuff in <abbr>L.</abbr> obvenire de <abbr>Signif. Nom. ff. fol.</abbr> &amp; de jure <abbr>Gent.</abbr> &amp; <abbr>Civil.</abbr> de <abbr>protib.</abbr> aliena <abbr>feud.</abbr> per federa, <abbr>test.</abbr> <abbr class="name">Joha.</abbr> Luxius in prolegom, quem velim videas, de <abbr>Analy. Cap.</abbr> 1, 2, 3. <abbr>Vid.</abbr> Idea.</i>
+						<a href="slawkenbergius-en.xhtml#noteref-12" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-13" epub:type="endnote">
 					<blockquote>
@@ -54,7 +59,9 @@
 						</p>
 						<cite>⸺⁠Lucas Gaurieus in <i epub:type="se:name.publication.book" xml:lang="la">Tractatu astrologico de præteritis multorum hominum accidentibus per genituras examinatis</i></cite>
 					</blockquote>
-					<p><a href="slawkenbergius-en.xhtml#noteref-13" epub:type="backlink">↩</a></p>
+					<p>
+						<a href="slawkenbergius-en.xhtml#noteref-13" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-14" epub:type="endnote">
 					<p>
@@ -69,106 +76,97 @@
 					<p>
 						<i xml:lang="fr">Il n’avoit que dix neuf ans lorsqu’il composa <i epub:type="se:name.publication.paper">Gonopsychanthropologia de Origine Animæ humanæ</i>.</i>
 					</p>
-					<p><i xml:lang="fr">(Les Enfans celebres, revûs &amp; corrigés par <abbr>M.</abbr> de la Monnoye de l’Academie Françoise.)</i> <a href="chapter-4-10.xhtml#noteref-14" epub:type="backlink">↩</a></p>
+					<p>
+						<i xml:lang="fr">(Les Enfans celebres, revûs &amp; corrigés par <abbr>M.</abbr> de la Monnoye de l’Academie Françoise.)</i>
+						<a href="chapter-4-10.xhtml#noteref-14" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-15" epub:type="endnote">
-					<p>According to the original Editions. <a href="chapter-4-13.xhtml#noteref-15" epub:type="backlink">↩</a></p>
+					<p>Vide Menagiana, <abbr>Vol.</abbr> <span epub:type="z3998:roman">I</span>. <a href="chapter-4-21.xhtml#noteref-15" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-16" epub:type="endnote">
-					<p>According to the original Editions. <a href="chapter-4-20.xhtml#noteref-16" epub:type="backlink">↩</a></p>
+					<p>Vide Swinburn on Testaments, Part 7, §8. <a href="chapter-4-29.xhtml#noteref-16" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-17" epub:type="endnote">
-					<p>Vide Menagiana, <abbr>Vol.</abbr> <span epub:type="z3998:roman">I</span>. <a href="chapter-4-21.xhtml#noteref-17" epub:type="backlink">↩</a></p>
+					<p>Vide Brook, <abbr>Abridg. Tit. Administr. N.</abbr> 47. <a href="chapter-4-29.xhtml#noteref-17" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-18" epub:type="endnote">
-					<p>Vide Swinburn on Testaments, Part 7, §8. <a href="chapter-4-29.xhtml#noteref-18" epub:type="backlink">↩</a></p>
+					<p>
+						<i xml:lang="la">Mater non numeratur inter consanguineos, <abbr>Bald.</abbr> in <abbr>ult. C.</abbr> de <abbr>Verb.</abbr> <abbr class="eoc">signific.</abbr></i>
+						<a href="chapter-4-29.xhtml#noteref-18" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-19" epub:type="endnote">
 					<p>Vide Brook, <abbr>Abridg. Tit. Administr. N.</abbr> 47. <a href="chapter-4-29.xhtml#noteref-19" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-20" epub:type="endnote">
-					<p><i xml:lang="la">Mater non numeratur inter consanguineos, <abbr>Bald.</abbr> in <abbr>ult. C.</abbr> de <abbr>Verb.</abbr> <abbr class="eoc">signific.</abbr></i> <a href="chapter-4-29.xhtml#noteref-20" epub:type="backlink">↩</a></p>
+					<p>Volumes <span epub:type="z3998:roman">V</span> and <span epub:type="z3998:roman">VI</span> in the first Edition. <a href="part-5-dedication.xhtml#noteref-20" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-21" epub:type="endnote">
-					<p>Vide Brook, <abbr>Abridg. Tit. Administr. N.</abbr> 47. <a href="chapter-4-29.xhtml#noteref-21" epub:type="backlink">↩</a></p>
+					<p>This book my father would never consent to publish; ’tis in manuscript, with some other tracts of his, in the family, all, or most of which will be printed in due time. <a href="chapter-5-12.xhtml#noteref-21" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-22" epub:type="endnote">
-					<p>According to the original Editions. <a href="chapter-4-32.xhtml#noteref-22" epub:type="backlink">↩</a></p>
+					<p><abbr>Mr.</abbr> <i>Shandy</i> is supposed to mean ******** *** <abbr>Esq.</abbr>; member for ******,⁠⸺⁠and not the <i>Chinese</i> Legislator. <a href="chapter-5-25.xhtml#noteref-22" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-23" epub:type="endnote">
-					<p>Volumes <span epub:type="z3998:roman">V</span> and <span epub:type="z3998:roman">VI</span> in the first Edition. <a href="part-5-dedication.xhtml#noteref-23" epub:type="backlink">↩</a></p>
+					<p><span xml:lang="el">Χαλεπῆς νόσου, καὶ δυσιάτου ἀπαλλαγὴν, ἣν ἄνθρακα καλοῦσιν.</span>⁠—<b>Philo</b>. <a href="chapter-5-28.xhtml#noteref-23" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-24" epub:type="endnote">
-					<p>This book my father would never consent to publish; ’tis in manuscript, with some other tracts of his, in the family, all, or most of which will be printed in due time. <a href="chapter-5-12.xhtml#noteref-24" epub:type="backlink">↩</a></p>
+					<p>
+						<span xml:lang="el">Τὰ τεμνόμενα τῶν ἐθνῶν τολυγονώτατα, καὶ πολυανθρωπότατα εἶναι.</span>
+						<a href="chapter-5-28.xhtml#noteref-24" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-25" epub:type="endnote">
-					<p><abbr>Mr.</abbr> <i>Shandy</i> is supposed to mean ******** *** <abbr>Esq.</abbr>; member for ******,⁠⸺⁠and not the <i>Chinese</i> Legislator. <a href="chapter-5-25.xhtml#noteref-25" epub:type="backlink">↩</a></p>
+					<p><span xml:lang="el">Καθαριότητος εἵνεκεν.</span>⁠—<b>Bochart</b>. <a href="chapter-5-28.xhtml#noteref-25" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-26" epub:type="endnote">
-					<p><span xml:lang="el">Χαλεπῆς νόσου, καὶ δυσιάτου ἀπαλλαγὴν, ἣν ἄνθρακα καλοῦσιν.</span>⁠—<b>Philo</b>. <a href="chapter-5-28.xhtml#noteref-26" epub:type="backlink">↩</a></p>
+					<p><span xml:lang="el">Ὁ Ἶλος, τὰ αἰδοῖα περιτέμνεται, ταὐτὸ ποιῆσαι καὶ τοὺς ἅμ’ αυτῷ συμμάχους καταναγκάσας.</span>⁠—<b>Sanchuniatho.</b> <a href="chapter-5-28.xhtml#noteref-26" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-27" epub:type="endnote">
-					<p><span xml:lang="el">Τὰ τεμνόμενα τῶν ἐθνῶν τολυγονώτατα, καὶ πολυανθρωπότατα εἶναι.</span> <a href="chapter-5-28.xhtml#noteref-27" epub:type="backlink">↩</a></p>
+					<p><i xml:lang="fr">Nous aurions quelque interêt</i>, says <i>Baillet</i>, <i xml:lang="fr">de montrer qu’il n’a rien de ridicule s’il étoit veritable, au moins dans le sens énigmatique que <i>Nicius Erythræus</i> a tâché de lui donner. Cet auteur dit que pour comprendre comme <i>Lipse</i>, il a pû composer un ouvrage le premier jour de sa vie, il faut s’imaginer, que ce premier jour n’est pas celui de sa naissance charnelle, mais celui au quel il a commencé d’user de la raison; il veut que ç’ait été à l’âge de <em>neuf</em> ans; et il nous veut persuader que ce fut en cet âge, que <i>Lipse</i> fit un poëme.⁠⸺⁠Le tour est ingénieux,</i> <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-6-2.xhtml#noteref-27" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-28" epub:type="endnote">
-					<p><span xml:lang="el">Καθαριότητος εἵνεκεν.</span>⁠—<b>Bochart</b>. <a href="chapter-5-28.xhtml#noteref-28" epub:type="backlink">↩</a></p>
+					<p><abbr>Vid.</abbr> <i>Pellegrina</i>. <a href="chapter-6-5.xhtml#noteref-28" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-29" epub:type="endnote">
-					<p><span xml:lang="el">Ὁ Ἶλος, τὰ αἰδοῖα περιτέμνεται, ταὐτὸ ποιῆσαι καὶ τοὺς ἅμ’ αυτῷ συμμάχους καταναγκάσας.</span>⁠—<b>Sanchuniatho.</b> <a href="chapter-5-28.xhtml#noteref-29" epub:type="backlink">↩</a></p>
+					<p><abbr>Vid.</abbr> Book of French post roads, page 36, edition of 1762. <a href="chapter-7-10.xhtml#noteref-29" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-30" epub:type="endnote">
-					<p>In the first edition, the sixth volume began with this chapter. <a href="chapter-6-1.xhtml#noteref-30" epub:type="backlink">↩</a></p>
+					<p>Chief Magistrate in Toulouse, <abbr>etc.</abbr> <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-7-17.xhtml#noteref-30" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-31" epub:type="endnote">
-					<p><i xml:lang="fr">Nous aurions quelque interêt</i>, says <i>Baillet</i>, <i xml:lang="fr">de montrer qu’il n’a rien de ridicule s’il étoit veritable, au moins dans le sens énigmatique que <i>Nicius Erythræus</i> a tâché de lui donner. Cet auteur dit que pour comprendre comme <i>Lipse</i>, il a pû composer un ouvrage le premier jour de sa vie, il faut s’imaginer, que ce premier jour n’est pas celui de sa naissance charnelle, mais celui au quel il a commencé d’user de la raison; il veut que ç’ait été à l’âge de <em>neuf</em> ans; et il nous veut persuader que ce fut en cet âge, que <i>Lipse</i> fit un poëme.⁠⸺⁠Le tour est ingénieux,</i> <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-6-2.xhtml#noteref-31" epub:type="backlink">↩</a></p>
-				</li>
-				<li id="note-32" epub:type="endnote">
-					<p><abbr>Vid.</abbr> <i>Pellegrina</i>. <a href="chapter-6-5.xhtml#noteref-32" epub:type="backlink">↩</a></p>
-				</li>
-				<li id="note-33" epub:type="endnote">
-					<p>Alluding to the first edition. <a href="chapter-6-40.xhtml#noteref-33" epub:type="backlink">↩</a></p>
-				</li>
-				<li id="note-34" epub:type="endnote">
-					<p><abbr>Vid.</abbr> Book of French post roads, page 36, edition of 1762. <a href="chapter-7-10.xhtml#noteref-34" epub:type="backlink">↩</a></p>
-				</li>
-				<li id="note-35" epub:type="endnote">
-					<p>Chief Magistrate in Toulouse, <abbr>etc.</abbr> <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-7-17.xhtml#noteref-35" epub:type="backlink">↩</a></p>
-				</li>
-				<li id="note-36" epub:type="endnote">
 					<p>
 						<i xml:lang="la">Non orbis gentem, non urbem gens habet ullam</i>
 					</p>
-					<p><i xml:lang="la">⸺⸺⁠⸺⸺⁠ulla parem.</i> <a href="chapter-7-18.xhtml#noteref-36" epub:type="backlink">↩</a></p>
+					<p>
+						<i xml:lang="la">⸺⸺⁠⸺⸺⁠ulla parem.</i>
+						<a href="chapter-7-18.xhtml#noteref-31" epub:type="backlink">↩</a>
+					</p>
+				</li>
+				<li id="note-32" epub:type="endnote">
+					<p>The same Don <i>Pringello</i>, the celebrated <i>Spanish</i> architect, of whom my cousin <i>Antony</i> has made such honourable mention in a scholium to the Tale inscribed to his name.⁠—<abbr>Vid.</abbr> <abbr>p.</abbr> 129, small edit. <a href="chapter-7-28.xhtml#noteref-32" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-33" epub:type="endnote">
+					<p><abbr>Vid.</abbr> <a href="chapter-6-40.xhtml">book 6, chapter 40</a>. <a href="chapter-8-1.xhtml#noteref-33" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-34" epub:type="endnote">
+					<p><abbr>Vid.</abbr> <i>Pope’s</i> Portrait. <a href="chapter-8-2.xhtml#noteref-34" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-35" epub:type="endnote">
+					<p><i xml:lang="la"><i>Rodope Thracia</i> tam inevitabili fascino instructa, tam exactè oculus intuens attraxit, ut si in illam quis incidisset, fieri non posset, quin caperetur.</i>⁠⸺⁠I know not who. <a href="chapter-8-24.xhtml#noteref-35" epub:type="backlink">↩</a></p>
+				</li>
+				<li id="note-36" epub:type="endnote">
+					<p>This will be printed with my father’s Life of <i>Socrates</i>, <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-8-26.xhtml#noteref-36" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-37" epub:type="endnote">
-					<p>The same Don <i>Pringello</i>, the celebrated <i>Spanish</i> architect, of whom my cousin <i>Antony</i> has made such honourable mention in a scholium to the Tale inscribed to his name.⁠—<abbr>Vid.</abbr> <abbr>p.</abbr> 129, small edit. <a href="chapter-7-28.xhtml#noteref-37" epub:type="backlink">↩</a></p>
+					<p><abbr>Mr.</abbr> <i>Shandy</i> must mean the poor <em>in spirit</em>; inasmuch as they divided the money amongst themselves. <a href="chapter-8-26.xhtml#noteref-37" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-38" epub:type="endnote">
-					<p><abbr>Vid.</abbr> <a href="chapter-6-40.xhtml">book 6, chapter 40</a>. <a href="chapter-8-1.xhtml#noteref-38" epub:type="backlink">↩</a></p>
+					<p>He lost his hand at the battle of <i>Lepanto</i>. <a href="chapter-9-24.xhtml#noteref-38" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-39" epub:type="endnote">
-					<p><abbr>Vid.</abbr> <i>Pope’s</i> Portrait. <a href="chapter-8-2.xhtml#noteref-39" epub:type="backlink">↩</a></p>
-				</li>
-				<li id="note-40" epub:type="endnote">
-					<p>Alluding to the first edition. <a href="chapter-8-6.xhtml#noteref-40" epub:type="backlink">↩</a></p>
-				</li>
-				<li id="note-41" epub:type="endnote">
-					<p><i xml:lang="la"><i>Rodope Thracia</i> tam inevitabili fascino instructa, tam exactè oculus intuens attraxit, ut si in illam quis incidisset, fieri non posset, quin caperetur.</i>⁠⸺⁠I know not who. <a href="chapter-8-24.xhtml#noteref-41" epub:type="backlink">↩</a></p>
-				</li>
-				<li id="note-42" epub:type="endnote">
-					<p>This will be printed with my father’s Life of <i>Socrates</i>, <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-8-26.xhtml#noteref-42" epub:type="backlink">↩</a></p>
-				</li>
-				<li id="note-43" epub:type="endnote">
-					<p><abbr>Mr.</abbr> <i>Shandy</i> must mean the poor <em>in spirit</em>; inasmuch as they divided the money amongst themselves. <a href="chapter-8-26.xhtml#noteref-43" epub:type="backlink">↩</a></p>
-				</li>
-				<li id="note-44" epub:type="endnote">
-					<p>Alluding to the first edition. <a href="chapter-8-35.xhtml#noteref-44" epub:type="backlink">↩</a></p>
-				</li>
-				<li id="note-45" epub:type="endnote">
-					<p>He lost his hand at the battle of <i>Lepanto</i>. <a href="chapter-9-24.xhtml#noteref-45" epub:type="backlink">↩</a></p>
-				</li>
-				<li id="note-46" epub:type="endnote">
-					<p>This must be a mistake in <abbr>Mr.</abbr> <i>Shandy</i>; for <i>Graaf</i> wrote upon the pancreatick juice, and the parts of generation. <a href="chapter-9-26.xhtml#noteref-46" epub:type="backlink">↩</a></p>
+					<p>This must be a mistake in <abbr>Mr.</abbr> <i>Shandy</i>; for <i>Graaf</i> wrote upon the pancreatick juice, and the parts of generation. <a href="chapter-9-26.xhtml#noteref-39" epub:type="backlink">↩</a></p>
 				</li>
 			</ol>
 		</section>
