Proofing fixes for book 4
- Semantics updates
- Style fixes
- Tweak some dash lengths to fix with our typography guidelines
- 2d -> 2nd

--- a/src/epub/text/slawkenbergius-la.xhtml
+++ b/src/epub/text/slawkenbergius-la.xhtml
@@ -76,7 +76,7 @@
 					<i xml:lang="la">Peregrinus illi non respondit. Votum faciebat tunc temporis sancto Nicolao; quo facto, in sinum dextrum inserens, e quâ negligenter pependit acinaces, lento gradu processit per plateam Argentorati latam quæ ad diversorium templo ex adversum ducit.</i>
 				</p>
 				<p>
-					<i xml:lang="la">Peregrinus mulo descendens stabulo includi, et manticam inferri jussit: quâ apertâ et coccineis sericis femoralibus extractis cum argenteo laciniato <span xml:lang="el">Περιζώματα</span>, his sese induit, statimque, acinaci in manu, ad forum deambulavit.</i>
+					<i xml:lang="la">Peregrinus mulo descendens stabulo includi, et manticam inferri jussit: quâ apertâ et coccineis sericis femoralibus extractis cum argenteo laciniato <i xml:lang="el">Περιζώματα</i>, his sese induit, statimque, acinaci in manu, ad forum deambulavit.</i>
 				</p>
 				<p>
 					<i xml:lang="la">Quod ubi peregrinus esset ingressus, uxorem tubicinis obviam euntem aspicit; illico cursum flectit, metuens ne nasus suus exploraretur, atque ad diversorium regressus est⁠—exuit se vestibus; braccas coccineas sericas manticæ imposuit mulumque educi jussit.</i>
