--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -109,19 +109,40 @@
 					<p><abbr>Mr.</abbr> <i>Shandy</i> is supposed to mean ******** *** <abbr>Esq.</abbr>; member for ******,⁠⸺⁠and not the <i>Chinese</i> Legislator. <a href="chapter-5-25.xhtml#noteref-22" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-23" epub:type="endnote">
-					<p><span xml:lang="el">Χαλεπῆς νόσου, καὶ δυσιάτου ἀπαλλαγὴν, ἣν ἄνθρακα καλοῦσιν.</span>⁠—<b>Philo</b>. <a href="chapter-5-28.xhtml#noteref-23" epub:type="backlink">↩</a></p>
+					<blockquote>
+						<p xml:lang="el">Χαλεπῆς νόσου, καὶ δυσιάτου ἀπαλλαγὴν, ἣν ἄνθρακα καλοῦσιν.</p>
+						<cite><abbr class="eoc">Philo.</abbr></cite>
+					</blockquote>
+					<p>
+						<a href="chapter-5-28.xhtml#noteref-23" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-24" epub:type="endnote">
 					<p>
-						<span xml:lang="el">Τὰ τεμνόμενα τῶν ἐθνῶν τολυγονώτατα, καὶ πολυανθρωπότατα εἶναι.</span>
+						<blockquote>
+						<p xml:lang="el">Τὰ τεμνόμενα τῶν ἐθνῶν τολυγονώτατα, καὶ πολυανθρωπότατα εἶναι.</p>
+					</blockquote>
+					<p>
 						<a href="chapter-5-28.xhtml#noteref-24" epub:type="backlink">↩</a>
 					</p>
 				</li>
 				<li id="note-25" epub:type="endnote">
-					<p><span xml:lang="el">Καθαριότητος εἵνεκεν.</span>⁠—<b>Bochart</b>. <a href="chapter-5-28.xhtml#noteref-25" epub:type="backlink">↩</a></p>
+					<blockquote>
+						<p xml:lang="el">Καθαριότητος εἵνεκεν.</p>⁠
+						<cite>Bochart.</cite>
+					</blockquote>
+					<p>
+						<a href="chapter-5-28.xhtml#noteref-25" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-26" epub:type="endnote">
-					<p><span xml:lang="el">Ὁ Ἶλος, τὰ αἰδοῖα περιτέμνεται, ταὐτὸ ποιῆσαι καὶ τοὺς ἅμ’ αυτῷ συμμάχους καταναγκάσας.</span>⁠—<b>Sanchuniatho.</b> <a href="chapter-5-28.xhtml#noteref-26" epub:type="backlink">↩</a></p>
+					<blockquote>
+						<p xml:lang="el">Ὁ Ἶλος, τὰ αἰδοῖα περιτέμνεται, ταὐτὸ ποιῆσαι καὶ τοὺς ἅμ’ αυτῷ συμμάχους καταναγκάσας.</p>
+						<cite>Sanchuniatho.</cite>
+					</blockquote>
+					<p>
+						<a href="chapter-5-28.xhtml#noteref-26" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-27" epub:type="endnote">
 					<p><i xml:lang="fr">Nous aurions quelque interêt</i>, says <i>Baillet</i>, <i xml:lang="fr">de montrer qu’il n’a rien de ridicule s’il étoit veritable, au moins dans le sens énigmatique que <i>Nicius Erythræus</i> a tâché de lui donner. Cet auteur dit que pour comprendre comme <i>Lipse</i>, il a pû composer un ouvrage le premier jour de sa vie, il faut s’imaginer, que ce premier jour n’est pas celui de sa naissance charnelle, mais celui au quel il a commencé d’user de la raison; il veut que ç’ait été à l’âge de <em>neuf</em> ans; et il nous veut persuader que ce fut en cet âge, que <i>Lipse</i> fit un poëme.⁠⸺⁠Le tour est ingénieux,</i> <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-6-2.xhtml#noteref-27" epub:type="backlink">↩</a></p>
