Proofing fixes for book 7
- Table styling and other style tweaks
- Add missing semantics
- Tidy some alignment
- Elision dashes
- Remove extraneous italicisation

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -13,7 +13,7 @@
 					<p>It is perhaps barely necessary to observe that the parallel does not extend to a further parallel between republication and talebearing. Once published, the thing is public. <a href="introduction.xhtml#noteref-1" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-2" epub:type="endnote">
-					<p>The <i>Romish</i> Rituals direct the baptizing of the child, in cases of danger, <i>before</i> it is born;⁠—but upon this proviso, That some part or other of the child’s body be seen by the baptizer:⁠⸺⁠But the Doctors of the <i>Sorbonne</i>, by a deliberation held amongst them, <i>April</i> 10, 1733,⁠—have enlarged the powers of the midwives, by determining, That though no part of the child’s body should appear,⁠⸺⁠that baptism shall, nevertheless, be administered to it by injection,⁠—<i xml:lang="fr">par le moyen d’une petite canulle,⁠—Anglicè</i> <em>a squirt</em>.⁠⸺’Tis very strange that <abbr>St.</abbr> <i>Thomas Aquinas</i>, who had so good a mechanical head, both for tying and untying the knots of school-divinity,⁠—should, after so much pains bestowed upon this,⁠—give up the point at last, as a second <i xml:lang="fr">La chose impossible</i>,⁠—“<i xml:lang="la">Infantes in maternis uteris existentes (quoth <abbr>St.</abbr> <i>Thomas!</i>) baptizari possunt <em>nullo modo</em></i>.”⁠—O <i>Thomas! Thomas!</i></p>
+					<p>The <i>Romish</i> Rituals direct the baptizing of the child, in cases of danger, <i>before</i> it is born;⁠—but upon this proviso, That some part or other of the child’s body be seen by the baptizer:⁠⸺⁠But the Doctors of the <i>Sorbonne</i>, by a deliberation held amongst them, <i>April</i> 10, 1733⁠—have enlarged the powers of the midwives, by determining, That though no part of the child’s body should appear,⁠⸺⁠that baptism shall, nevertheless, be administered to it by injection⁠—<i xml:lang="fr">par le moyen d’une petite canulle⁠—Anglicè</i> <em>a squirt</em>.⁠⸺’Tis very strange that <abbr>St.</abbr> <i>Thomas Aquinas</i>, who had so good a mechanical head, both for tying and untying the knots of school-divinity⁠—should, after so much pains bestowed upon this⁠—give up the point at last, as a second <i xml:lang="fr">La chose impossible</i>⁠—“<i xml:lang="la">Infantes in maternis uteris existentes (quoth <abbr>St.</abbr> <i>Thomas!</i>) baptizari possunt <em>nullo modo</em></i>.”⁠—O <i>Thomas! Thomas!</i></p>
 					<p>If the reader has the curiosity to see the question upon baptism <em>by injection</em>, as presented to the Doctors of the <i>Sorbonne</i>, with their consultation thereupon, it is as follows.</p>
 					<p>
 						<a href="chapter-1-20.xhtml#noteref-2" epub:type="backlink">↩</a>
@@ -118,8 +118,7 @@
 					</p>
 				</li>
 				<li id="note-24" epub:type="endnote">
-					<p>
-						<blockquote>
+					<blockquote>
 						<p xml:lang="el">Τὰ τεμνόμενα τῶν ἐθνῶν τολυγονώτατα, καὶ πολυανθρωπότατα εἶναι.</p>
 					</blockquote>
 					<p>
@@ -128,7 +127,7 @@
 				</li>
 				<li id="note-25" epub:type="endnote">
 					<blockquote>
-						<p xml:lang="el">Καθαριότητος εἵνεκεν.</p>⁠
+						<p xml:lang="el">Καθαριότητος εἵνεκεν.</p>
 						<cite>Bochart.</cite>
 					</blockquote>
 					<p>
@@ -157,13 +156,7 @@
 					<p>Chief Magistrate in Toulouse, <abbr>etc.</abbr> <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-7-17.xhtml#noteref-30" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-31" epub:type="endnote">
-					<p>
-						<i xml:lang="la">Non orbis gentem, non urbem gens habet ullam</i>
-					</p>
-					<p>
-						<i xml:lang="la">⸺⸺⁠⸺⸺⁠ulla parem.</i>
-						<a href="chapter-7-18.xhtml#noteref-31" epub:type="backlink">↩</a>
-					</p>
+					<p><i xml:lang="la">Non orbis gentem, non urbem gens habet ullam⁠⸺⸺⁠⸺⸺⁠ulla parem.</i> <a href="chapter-7-18.xhtml#noteref-31" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-32" epub:type="endnote">
 					<p>The same Don <i>Pringello</i>, the celebrated <i>Spanish</i> architect, of whom my cousin <i>Antony</i> has made such honourable mention in a scholium to the Tale inscribed to his name.⁠—<abbr>Vid.</abbr> <abbr>p.</abbr> 129, small edit. <a href="chapter-7-28.xhtml#noteref-32" epub:type="backlink">↩</a></p>
