Proofing fixes for book 8
Quotes, elision dashes and some semantic changes.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -168,7 +168,13 @@
 					<p><abbr>Vid.</abbr> <i>Pope’s</i> Portrait. <a href="chapter-8-2.xhtml#noteref-34" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-35" epub:type="endnote">
-					<p><i xml:lang="la"><i>Rodope Thracia</i> tam inevitabili fascino instructa, tam exactè oculus intuens attraxit, ut si in illam quis incidisset, fieri non posset, quin caperetur.</i>⁠⸺⁠I know not who. <a href="chapter-8-24.xhtml#noteref-35" epub:type="backlink">↩</a></p>
+					<blockquote>
+						<p>
+							<i xml:lang="la"><i>Rodope Thracia</i> tam inevitabili fascino instructa, tam exactè oculus intuens attraxit, ut si in illam quis incidisset, fieri non posset, quin caperetur.</i>
+						</p>
+						<cite>⸺⁠I know not who.</cite>
+					</blockquote>
+					<p><a href="chapter-8-24.xhtml#noteref-35" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-36" epub:type="endnote">
 					<p>This will be printed with my father’s Life of <i>Socrates</i>, <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-8-26.xhtml#noteref-36" epub:type="backlink">↩</a></p>
