--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -111,7 +111,9 @@
 				<li id="note-23" epub:type="endnote">
 					<blockquote>
 						<p xml:lang="el">Χαλεπῆς νόσου, καὶ δυσιάτου ἀπαλλαγὴν, ἣν ἄνθρακα καλοῦσιν.</p>
-						<cite><abbr class="eoc">Philo.</abbr></cite>
+						<cite>
+							<abbr class="eoc">Philo.</abbr>
+						</cite>
 					</blockquote>
 					<p>
 						<a href="chapter-5-28.xhtml#noteref-23" epub:type="backlink">↩</a>
@@ -156,7 +158,10 @@
 					<p>Chief Magistrate in Toulouse, <abbr>etc.</abbr> <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-7-17.xhtml#noteref-30" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-31" epub:type="endnote">
-					<p><i xml:lang="la">Non orbis gentem, non urbem gens habet ullam⁠⸺⸺⁠⸺⸺⁠ulla parem.</i> <a href="chapter-7-18.xhtml#noteref-31" epub:type="backlink">↩</a></p>
+					<p>
+						<i xml:lang="la">Non orbis gentem, non urbem gens habet ullam⁠⸺⸺⁠⸺⸺⁠ulla parem.</i>
+						<a href="chapter-7-18.xhtml#noteref-31" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-32" epub:type="endnote">
 					<p>The same Don <i>Pringello</i>, the celebrated <i>Spanish</i> architect, of whom my cousin <i>Antony</i> has made such honourable mention in a scholium to the Tale inscribed to his name.⁠—<abbr>Vid.</abbr> <abbr>p.</abbr> 129, small edit. <a href="chapter-7-28.xhtml#noteref-32" epub:type="backlink">↩</a></p>
@@ -174,7 +179,9 @@
 						</p>
 						<cite>⸺⁠I know not who.</cite>
 					</blockquote>
-					<p><a href="chapter-8-24.xhtml#noteref-35" epub:type="backlink">↩</a></p>
+					<p>
+						<a href="chapter-8-24.xhtml#noteref-35" epub:type="backlink">↩</a>
+					</p>
 				</li>
 				<li id="note-36" epub:type="endnote">
 					<p>This will be printed with my father’s Life of <i>Socrates</i>, <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-8-26.xhtml#noteref-36" epub:type="backlink">↩</a></p>
