Adjust image alt tag

--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -17,7 +17,7 @@
 						<a href="chapter-3-36.xhtml#illustration-2">A marbled page.</a>
 					</li>
 					<li>
-						<a href="chapter-6-40.xhtml#illustration-3">Squiggly lines captioned “Inv. T. S. / Scul. T. S.”.</a>
+						<a href="chapter-6-40.xhtml#illustration-3">Squiggly lines captioned “Inv. T. S. / Scul. T. S.”</a>
 					</li>
 					<li>
 						<a href="chapter-6-40.xhtml#illustration-4">A squiggly line marked A, B, CC CCC, D.</a>
