Add xml:lang tag to heading

--- a/src/epub/text/slawkenbergius-la.xhtml
+++ b/src/epub/text/slawkenbergius-la.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="part-4" epub:type="part">
 			<section id="slawkenbergius-la" epub:type="chapter">
-				<h2 epub:type="title">Slawkenbergii Fabella<a href="endnotes.xhtml#note-9" id="noteref-9" epub:type="noteref">9</a></h2>
+				<h2 epub:type="title" xml:lang="la">Slawkenbergii Fabella<a href="endnotes.xhtml#note-9" id="noteref-9" epub:type="noteref">9</a></h2>
 				<p>
 					<i xml:lang="la">Vespera quâdam frigidulâ, posteriori in parte mensis <em>Augusti</em>, peregrinus, mulo fusco colore insidens, manticâ a tergo, paucis indusiis, binis calceis, braccisque sericis coccineis repleta, <em>Argentoratum</em> ingressus est.</i>
 				</p>
