--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -88,16 +88,16 @@
 					<p>Vide Swinburn on Testaments, Part 7, §8. <a href="chapter-4-29.xhtml#noteref-16" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-17" epub:type="endnote">
-					<p>Vide Brook, <abbr>Abridg. Tit. Administr. N.</abbr> 47. <a href="chapter-4-29.xhtml#noteref-17" epub:type="backlink">↩</a></p>
+					<p>Vide Brook, <abbr>Abridg.</abbr> <abbr>Tit.</abbr> <abbr>Administr.</abbr> <abbr>N.</abbr> 47. <a href="chapter-4-29.xhtml#noteref-17" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-18" epub:type="endnote">
 					<p>
-						<i xml:lang="la">Mater non numeratur inter consanguineos, <abbr>Bald.</abbr> in <abbr>ult. C.</abbr> de <abbr>Verb.</abbr> <abbr class="eoc">signific.</abbr></i>
+						<i xml:lang="la">Mater non numeratur inter consanguineos, <abbr>Bald.</abbr> in <abbr>ult.</abbr> <abbr>C.</abbr> de <abbr>Verb.</abbr> <abbr class="eoc">signific.</abbr></i>
 						<a href="chapter-4-29.xhtml#noteref-18" epub:type="backlink">↩</a>
 					</p>
 				</li>
 				<li id="note-19" epub:type="endnote">
-					<p>Vide Brook, <abbr>Abridg. Tit. Administr. N.</abbr> 47. <a href="chapter-4-29.xhtml#noteref-19" epub:type="backlink">↩</a></p>
+					<p>Vide Brook, <abbr>Abridg.</abbr> <abbr>Tit.</abbr> <abbr>Administr.</abbr> <abbr>N.</abbr> 47. <a href="chapter-4-29.xhtml#noteref-19" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-20" epub:type="endnote">
 					<p>Volumes <span epub:type="z3998:roman">V</span> and <span epub:type="z3998:roman">VI</span> in the first Edition. <a href="part-5-dedication.xhtml#noteref-20" epub:type="backlink">↩</a></p>
