--- a/src/epub/text/titlepage.xhtml
+++ b/src/epub/text/titlepage.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="titlepage" epub:type="titlepage">
-			<img alt="The titlepage for the Standard Ebooks edition of The Life and Opinions of Tristram Shandy, Gentleman, by Laurence Sterne" src="../images/titlepage.svg"/>
+			<img alt="The titlepage for the Standard Ebooks edition of The Life and Opinions of Tristram Shandy, Gentleman, by Laurence Sterne" src="../images/titlepage.svg" epub:type="se:color-depth.black-on-transparent"/>
 		</section>
 	</body>
 </html>
