Add <cite> around names in endnotes

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -164,7 +164,7 @@
 					</p>
 				</li>
 				<li id="note-32" epub:type="endnote">
-					<p>The same Don <i>Pringello</i>, the celebrated <i>Spanish</i> architect, of whom my cousin <i>Antony</i> has made such honourable mention in a scholium to the Tale inscribed to his name.⁠—<abbr>Vid.</abbr> <abbr>p.</abbr> 129, small edit. <a href="chapter-7-28.xhtml#noteref-32" epub:type="backlink">↩</a></p>
+					<p>The same Don <i>Pringello</i>, the celebrated <i>Spanish</i> architect, of whom my cousin <i>Antony</i> has made such honourable mention in a scholium to the Tale inscribed to his name. <abbr>—<abbr>Vid.</abbr> <abbr>p.</abbr> 129, small <abbr class="eoc">edit.</abbr></abbr> <a href="chapter-7-28.xhtml#noteref-32" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-33" epub:type="endnote">
 					<p><abbr>Vid.</abbr> <a href="chapter-6-40.xhtml">book 6, chapter 40</a>. <a href="chapter-8-1.xhtml#noteref-33" epub:type="backlink">↩</a></p>
