Replace .signature class with z3998:signature epub:type

--- a/src/epub/text/part-5-dedication.xhtml
+++ b/src/epub/text/part-5-dedication.xhtml
@@ -16,7 +16,7 @@
 					<p><b>My Lord,</b><br/>
 					Your Lordship’s most devoted<br/>
 					and most humble Servant,</p>
-					<p class="signature"><abbr class="name">Laur.</abbr> Sterne.</p>
+					<p epub:type="z3998:signature"><abbr class="name">Laur.</abbr> Sterne.</p>
 				</footer>
 			</section>
 		</section>
