--- a/src/epub/text/part-9-dedication.xhtml
+++ b/src/epub/text/part-9-dedication.xhtml
@@ -37,7 +37,7 @@
 				<p>In a word, by thus introducing an entire new set of objects to his Imagination, I shall unavoidably give a <em>Diversion</em> to his passionate and lovesick Contemplations. In the meantime,</p>
 				<footer>
 					<p>I am</p>
-					<p class="signature">The Author.</p>
+					<p epub:type="z3998:signature">The Author.</p>
 				</footer>
 			</section>
 		</section>
