Adjust semantics and add missing epigraph cite styling

--- a/src/epub/text/epigraph.xhtml
+++ b/src/epub/text/epigraph.xhtml
@@ -7,11 +7,9 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="epigraph" epub:type="epigraph">
-			<blockquote>
-				<p>
-					<i xml:lang="el">Ταράσσει τοὺς Ἀνθρώπους οὐ τὰ Πράγματα,<br/>
-					Ἀλλὰ τὰ περὶ τῶν Πραγμάτων Δόγματα.</i>
-				</p>
+			<blockquote xml:lang="el">
+				<p>Ταράσσει τοὺς Ἀνθρώπους οὐ τὰ Πράγματα,<br/>
+				Ἀλλὰ τὰ περὶ τῶν Πραγμάτων Δόγματα.</p>
 			</blockquote>
 		</section>
 	</body>
