--- a/src/epub/text/part-3.xhtml
+++ b/src/epub/text/part-3.xhtml
@@ -12,9 +12,7 @@
 				<span epub:type="ordinal z3998:roman">III</span>
 			</h2>
 			<blockquote epub:type="epigraph">
-				<p>
-					<i xml:lang="la">Multitudinis imperitæ non formido judicia; meis tamen, rogo, parcant opusculis⁠⸻in quibus fuit propositi semper, a jocis ad seria, a seriis vicissim ad jocos transire.</i>
-				</p>
+				<p xml:lang="la">Multitudinis imperitæ non formido judicia; meis tamen, rogo, parcant opusculis⁠⸻in quibus fuit propositi semper, a jocis ad seria, a seriis vicissim ad jocos transire.</p>
 				<cite>—<abbr class="name">Joan.</abbr> Saresberiensis, <i xml:lang="la">Episcopus Lugdun</i>.</cite>
 			</blockquote>
 		</section>
