--- a/src/epub/text/part-5.xhtml
+++ b/src/epub/text/part-5.xhtml
@@ -12,24 +12,18 @@
 				<span epub:type="ordinal z3998:roman">V</span>
 			</h2>
 			<blockquote epub:type="epigraph">
-				<p>
-					<i xml:lang="la">Dixero si quid fortè jocosius, hoc mihi juris<br/>
-					Cum venia dabis.⁠⸺⁠</i>
-				</p>
+				<p xml:lang="la">Dixero si quid fortè jocosius, hoc mihi juris<br/>
+				Cum venia dabis.⁠⸺⁠</p>
 				<cite>
 					<abbr class="name">Hor.</abbr>
 				</cite>
 			</blockquote>
 			<blockquote epub:type="epigraph">
-				<p>
-					<i xml:lang="la">—Si quis calumnietur levius esse quam decet theologum, aut mordacius quam deceat Christianum⁠—non Ego, sed Democritus dixit.⁠—</i>
-				</p>
+				<p xml:lang="la">—Si quis calumnietur levius esse quam decet theologum, aut mordacius quam deceat Christianum⁠—non Ego, sed Democritus dixit.⁠—</p>
 				<cite>Erasmus</cite>
 			</blockquote>
 			<blockquote epub:type="epigraph">
-				<p>
-					<i xml:lang="la">Si quis Clericus, aut Monachus, verba joculatoria, risum moventia, sciebat, anathema esto.⁠—</i>
-				</p>
+				<p xml:lang="la">Si quis Clericus, aut Monachus, verba joculatoria, risum moventia, sciebat, anathema esto.⁠—</p>
 				<cite>Second Council of Carthage</cite>
 			</blockquote>
 		</section>
