--- a/src/epub/text/part-9.xhtml
+++ b/src/epub/text/part-9.xhtml
@@ -12,15 +12,11 @@
 				<span epub:type="ordinal z3998:roman">IX</span>
 			</h2>
 			<blockquote epub:type="epigraph">
-				<p>
-					<i xml:lang="la">Non enim excursus hic ejus, sed opus ipsum est.</i>
-				</p>
+				<p xml:lang="la">Non enim excursus hic ejus, sed opus ipsum est.</p>
 				<cite><abbr class="name">Plin.</abbr> <abbr>Lib.</abbr> <span epub:type="z3998:roman">v</span> <abbr>Epist.</abbr> 6</cite>
 			</blockquote>
 			<blockquote epub:type="epigraph">
-				<p>
-					<i xml:lang="la">Si quid urbaniusculè lusum a nobis, per Musas et Charitas et omnium poëtarum Numina, Oro te, ne me malè capias.</i>
-				</p>
+				<p xml:lang="la">Si quid urbaniusculè lusum a nobis, per Musas et Charitas et omnium poëtarum Numina, Oro te, ne me malè capias.</p>
 			</blockquote>
 		</section>
 	</body>
