--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -23,7 +23,7 @@
 					<a href="text/dedication.xhtml">To the Right Honourable <abbr>Mr.</abbr> Pitt</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml">The Life and Opinions of Tristram Shandy, Gentleman</a>
+					<a href="text/halftitlepage.xhtml">The Life and Opinions of Tristram Shandy, Gentleman</a>
 					<ol>
 						<li>
 							<a href="text/part-1.xhtml">Book <span epub:type="z3998:roman">I</span></a>
@@ -1080,7 +1080,7 @@
 					<a href="text/dedication.xhtml" epub:type="frontmatter dedication">To the Right Honourable Mr. Pitt</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
 					<a href="text/part-1.xhtml" epub:type="bodymatter z3998:fiction">The Life and Opinions of Tristram Shandy, Gentleman</a>
