--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -146,7 +146,7 @@
 					</p>
 				</li>
 				<li id="note-27" epub:type="endnote">
-					<p><i xml:lang="fr">Nous aurions quelque interêt</i>, says <i>Baillet</i>, <i xml:lang="fr">de montrer qu’il n’a rien de ridicule s’il étoit veritable, au moins dans le sens énigmatique que <i>Nicius Erythræus</i> a tâché de lui donner. Cet auteur dit que pour comprendre comme <i>Lipse</i>, il a pû composer un ouvrage le premier jour de sa vie, il faut s’imaginer, que ce premier jour n’est pas celui de sa naissance charnelle, mais celui au quel il a commencé d’user de la raison; il veut que ç’ait été à l’âge de <em>neuf</em> ans; et il nous veut persuader que ce fut en cet âge, que <i>Lipse</i> fit un poëme.⁠⸺⁠Le tour est ingénieux,</i> <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-6-2.xhtml#noteref-27" epub:type="backlink">↩</a></p>
+					<p><i xml:lang="fr">Nous aurions quelque interêt</i>, says <i>Baillet</i>, <i xml:lang="fr">de montrer qu’il n’a rien de ridicule s’il étoit veritable, au moins dans le sens énigmatique que <i>Nicius Erythræus</i> a tâché de lui donner. Cet auteur dit que pour comprendre comme <i>Lipse</i>, il a pû composer un ouvrage le premier jour de sa vie, il faut s’imaginer, que ce premier jour n’est pas celui de sa naissance charnelle, mais celui au quel il a commencé d’user de la raison; il veut que ç’ait été à l’âge de <em>neuf</em> ans; et il nous veut persuader que ce fut en cet âge, que <i>Lipse</i> fit un poëme.⁠⸺⁠Le tour est ingénieux</i>, <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-6-2.xhtml#noteref-27" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-28" epub:type="endnote">
 					<p><abbr>Vid.</abbr> <i>Pellegrina</i>. <a href="chapter-6-5.xhtml#noteref-28" epub:type="backlink">↩</a></p>
