--- a/src/epub/text/part-5-dedication.xhtml
+++ b/src/epub/text/part-5-dedication.xhtml
@@ -13,7 +13,7 @@
 				<p>I humbly beg leave to offer you these two Volumes;<a href="endnotes.xhtml#note-20" id="noteref-20" epub:type="noteref">20</a> they are the best my talents, with such bad health as I have, could produce:⁠—had Providence granted me a larger stock of either, they had been a much more proper present to your Lordship.</p>
 				<p>I beg your Lordship will forgive me, if, at the same time I dedicate this work to you, I join Lady <b>Spencer</b>, in the liberty I take of inscribing the story of <i>Le Fever</i> to her name; for which I have no other motive, which my heart has informed me of, but that the story is a humane one.</p>
 				<footer>
-					<p><b>My Lord,</b><br/>
+					<p><b>My Lord</b>,<br/>
 					Your Lordship’s most devoted<br/>
 					and most humble Servant,</p>
 					<p epub:type="z3998:signature"><abbr class="name">Laur.</abbr> Sterne.</p>
