Update colophon to new template

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -14,8 +14,8 @@
 			<p><i epub:type="se:name.publication.book">The Life and Opinions of Tristram Shandy, Gentleman</i><br/>
 			was published between 1759 and 1767 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Laurence_Sterne">Laurence Sterne</a>.</p>
-			<p>This ebook was produced for the<br/>
-			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
+			<p>This ebook was produced for<br/>
+			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://www.robinwhittleton.com">Robin Whittleton</a>,<br/>
 			and is based on a transcription produced in 2012 by<br/>
