--- a/src/epub/text/part-5.xhtml
+++ b/src/epub/text/part-5.xhtml
@@ -15,7 +15,7 @@
 				<p xml:lang="la">Dixero si quid fortè jocosius, hoc mihi juris<br/>
 				Cum venia dabis.⁠⸺⁠</p>
 				<cite>
-					<abbr class="name">Hor.</abbr>
+					<abbr epub:type="z3998:given-name">Hor.</abbr>
 				</cite>
 			</blockquote>
 			<blockquote epub:type="epigraph">
