--- a/src/epub/text/part-9.xhtml
+++ b/src/epub/text/part-9.xhtml
@@ -13,7 +13,7 @@
 			</h2>
 			<blockquote epub:type="epigraph">
 				<p xml:lang="la">Non enim excursus hic ejus, sed opus ipsum est.</p>
-				<cite><abbr class="name">Plin.</abbr> <abbr>Lib.</abbr> <span epub:type="z3998:roman">v</span> <abbr>Epist.</abbr> 6</cite>
+				<cite><abbr epub:type="z3998:given-name">Plin.</abbr> <abbr>Lib.</abbr> <span epub:type="z3998:roman">v</span> <abbr>Epist.</abbr> 6</cite>
 			</blockquote>
 			<blockquote epub:type="epigraph">
 				<p xml:lang="la">Si quid urbaniusculè lusum a nobis, per Musas et Charitas et omnium poëtarum Numina, Oro te, ne me malè capias.</p>
