Titlecase some items

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -74,7 +74,7 @@
 						<i xml:lang="fr">Mais quand on se represente que l’Enfant a vecu près de quatre-vingts ans, &amp; qu’il a composé quatre-vingts Ouvrages differents tous fruits d’une longue lecture⁠—il faut convenir que tout ce qui est incroyable n’est pas toujours faux, &amp; que la <em>Vraisemblance n’est pas toujours du côté de la Verité</em>.</i>
 					</p>
 					<p>
-						<i xml:lang="fr">Il n’avoit que dix neuf ans lorsqu’il composa <i epub:type="se:name.publication.paper">Gonopsychanthropologia de Origine Animæ humanæ</i>.</i>
+						<i xml:lang="fr">Il n’avoit que dix neuf ans lorsqu’il composa <i epub:type="se:name.publication.paper" xml:lang="la">Gonopsychanthropologia de Origine Animæ humanæ</i>.</i>
 					</p>
 					<p>
 						<i xml:lang="fr">(Les Enfans celebres, revûs &amp; corrigés par <abbr>M.</abbr> de la Monnoye de l’Academie Françoise.)</i>
