--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -6,42 +6,40 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="backmatter">
-		<section id="loi" epub:type="loi">
-			<nav epub:type="loi">
-				<h2 epub:type="title">List of Illustrations</h2>
-				<ol>
-					<li>
-						<p>
-							<a href="chapter-1-12.xhtml#illustration-1">An illustration of a black tombstone.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-3-36.xhtml#illustration-2">A marbled page.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-6-40.xhtml#illustration-3">Squiggly lines captioned “Inv. T. S. / Scul. T. S.”</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-6-40.xhtml#illustration-4">A squiggly line marked A, B, CC CCC, D.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-6-40.xhtml#illustration-5">A straight line.</a>
-						</p>
-					</li>
-					<li>
-						<p>
-							<a href="chapter-9-4.xhtml#illustration-6">A squiggly line that indicates the corporal’s flourish.</a>
-						</p>
-					</li>
-				</ol>
-			</nav>
-		</section>
+		<nav id="loi" epub:type="loi">
+			<h2 epub:type="title">List of Illustrations</h2>
+			<ol>
+				<li>
+					<p>
+						<a href="chapter-1-12.xhtml#illustration-1">An illustration of a black tombstone.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-3-36.xhtml#illustration-2">A marbled page.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-6-40.xhtml#illustration-3">Squiggly lines captioned “Inv. T. S. / Scul. T. S.”</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-6-40.xhtml#illustration-4">A squiggly line marked A, B, CC CCC, D.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-6-40.xhtml#illustration-5">A straight line.</a>
+					</p>
+				</li>
+				<li>
+					<p>
+						<a href="chapter-9-4.xhtml#illustration-6">A squiggly line that indicates the corporal’s flourish.</a>
+					</p>
+				</li>
+			</ol>
+		</nav>
 	</body>
 </html>
