Update ToC Landmarks to latest standard

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -1065,37 +1065,13 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
-				</li>
-				<li>
-					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
-				</li>
-				<li>
-					<a href="text/introduction.xhtml" epub:type="frontmatter introduction">Introduction</a>
-				</li>
-				<li>
-					<a href="text/epigraph.xhtml" epub:type="frontmatter epigraph">Epigraph</a>
-				</li>
-				<li>
-					<a href="text/dedication.xhtml" epub:type="frontmatter dedication">To the Right Honourable Mr. Pitt</a>
-				</li>
-				<li>
-					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
-				</li>
-				<li>
-					<a href="text/part-1.xhtml" epub:type="bodymatter z3998:fiction">The Life and Opinions of Tristram Shandy, Gentleman</a>
+					<a href="text/part-1.xhtml" epub:type="bodymatter">The Life and Opinions of Tristram Shandy, Gentleman</a>
 				</li>
 				<li>
 					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
 				</li>
 				<li>
 					<a href="text/loi.xhtml" epub:type="backmatter loi">List of Illustrations</a>
-				</li>
-				<li>
-					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
-				</li>
-				<li>
-					<a href="text/uncopyright.xhtml" epub:type="backmatter copyright-page">Uncopyright</a>
 				</li>
 			</ol>
 		</nav>
