--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -9,7 +9,7 @@
 		<section id="colophon" epub:type="colophon">
 			<header>
 				<h2 epub:type="title">Colophon</h2>
-				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
+				<img alt="The Standard Ebooks logo." src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">The Life and Opinions of Tristram Shandy, Gentleman</i><br/>
 			was published between 1759 and 1767 by<br/>
