--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -22,7 +22,7 @@
 			<b epub:type="z3998:personal-name">Louise Hope</b>, <b epub:type="z3998:personal-name">Malcolm Farmer</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/39270">Project Gutenberg</a><br/>
-			and on digital scans available at the<br/>
+			and on digital scans from the<br/>
 			<a href="https://archive.org/details/in.ernet.dli.2015.285840">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Uncle Toby and Widow Wadman</i>,<br/>
