--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -20,7 +20,7 @@
 					<a href="text/epigraph.xhtml">Epigraph</a>
 				</li>
 				<li>
-					<a href="text/dedication.xhtml">To the Right Honourable <abbr>Mr.</abbr> Pitt</a>
+					<a href="text/dedication.xhtml">To the Right Honourable <abbr epub:type="z3998:name-title">Mr.</abbr> Pitt</a>
 				</li>
 				<li>
 					<a href="text/halftitlepage.xhtml">The Life and Opinions of Tristram Shandy, Gentleman</a>
